--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,6 @@
   "include": [
     "*.js",
     "**/*.js",
-    "/Users/XiaoXiang/.vscode/extensions/samplavigne.p5-vscode-1.2.16/p5types/global.d.ts"
+    "/Users/xiaoxiang/.vscode/extensions/samplavigne.p5-vscode-1.2.16/p5types/global.d.ts"
   ]
 }
